# dynabench

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENCE  README.md  animate.py  baseline.py  build_scripts.sh  cconv_param_search.py  cconv_test.py  changelog  dedalus.Dockerfile  gas_dynamics.py  gen.py  generate.py  generate_data_minimal.sh  main copy.py  main.py  plot_equation.py  plot_interpolation.py  plot_test.py  pyproject.toml  requirements.txt  speed_test.py  test.py  test_net.py  test_plot.py
.github/workflows/: build_docs.yml  test_all.yml
config/: config.gin  dataset.gin  experiment.gin  generate.yaml  seeds.txt  set_parameters.gin  train.yaml  trainer.gin
config/baseline/: persistence.gin  zero.gin
config/datamodule/: graph.yaml  torch.yaml
config/equation/: advection.yaml  brusselator.yaml  burgers.yaml  gas_dynamics.yaml  gasdynamics.yaml  kuramoto_sivashinsky.yaml  kuramotosivashinsky.yaml  reaction_diffusion.yaml  reactiondiffusion.yaml  wave.yaml
config/generator/: default.gin  default.yaml
config/lightningmodule/: graphmodule.yaml  gridmodule.yaml
config/model/: cnn.yaml  difference.yaml  feast.gin  feast.yaml  gat.gin  gat.yaml  gcn.gin  gcn.yaml  graphpde.yaml  kernelNN.yaml  neuralpde.yaml  persistence.gin  persistence.yaml  point_gnn.gin  point_gnn.yaml  point_net.gin  point_net.yaml  point_transformer.gin  point_transformer.yaml  resnet.yaml  zero.gin  zero.yaml
config/postprocessing/: default.yaml
config/seeds/: test.txt  train.txt  val.txt
config/task/: evolution.yaml  forecast.yaml
config/trainer/: default.yaml
docs/: .jekyll-metadata  Gemfile  _config.yml  docs.markdown  index.markdown  results.markdown  visualizations.markdown
docs/_data/: docs_navigation.yml  navigation.yml  paper_links.yml  visualizations.yml
docs/_posts/: 2023-06-23-welcome-to-jekyll.markdown
docs/_site/: feed.xml
docs/source/: about.rst  api.rst  conf.py  guide.rst  index.rst  installing.rst  papers.rst  results.rst  start.rst
examples/: example_burgers.py  example_cahn_hilliard.py  example_equation_dataloader.py  example_grind.py  example_kuramotosivashinsky.py  example_neural_operator.py  example_neural_operator_geo.py  example_neuralpde.py  example_point_transformer.py  example_point_transformer_v1.py  example_point_transformer_v3.py  example_zfk.py
notebooks/: analysis.ipynb  data_statistics.ipynb  results_rollout.csv  visualizations.ipynb
scripts/: generate_data.sh  get_seeds.py  install_requirements.sh  install_requirements_mac.sh  run_experiments.sh  run_kubernetes.sh
src/: setup.py
src/dataset/: __init__.py  dataloader.py  datapipe.py  dataset_base.py  dataset_graph.py  dataset_pytorch.py
src/dynabench/: _init_.py  equation.py  grid.py  initial.py
src/generator/: __init__.py  equations.py  initial.py  solver.py
src/model/: __init__.py  baseline_persistence.py  baseline_zero.py  evolution_model.py  feast.py  forecast_model.py  gat.py  gcn.py  gridmodule.py  lightningmodule.py  mlp.py  point_gnn.py  point_gnn_conv.py  point_net.py  point_transformer.py
tests/: conftest.py  test_equation.py  test_initial.py
(+136 files in other folders)
